--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kullaniciadi.github.io/proje-adi",
+  "homepage": "https://abdullahbaspinar.github.io/Weather_App",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
